--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/burger.css" type="text/css" />
+    <link rel="stylesheet" href="/css/burger.css" type="text/css" />
 
     <title>Burger App</title>
 
 </head>
 
-<body>
+<body class="body">
     {{{ body }}}
-    <script src="/public/js/burgers.js"></script>
+    <script src="/js/burgers.js"></script>
 
 </body>
 
