--- a/public/css/burger.css
+++ b/public/css/burger.css
@@ -1,10 +1,11 @@
-h2 {
-  font-family: "Times New Roman", Times, serif;
-  font-size: 60px;
+h1 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 50px;
+  color: brown;
 }
 
 body {
-  background: red;
+  background-color: burlywood;
 }
 
 h1 {
@@ -15,27 +16,14 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-}
-
-#left {
-  float: left;
-  background-color: rgb(250, 213, 48);
-}
-
-#right {
-  float: right;
-  background-color: rgb(18, 153, 153);
-}
-
-#left,
-#right {
-  width: 45%;
-  margin: 10px;
 }
 
 form {
   background-color: goldenrod;
+  font-size: 20px;
+  margin: 0;
+  /* width: 30;
+  height: 30%; */
 }
 
 button {
